search pills: Prevent overflow for very long pills.

--- a/web/styles/input_pill.css
+++ b/web/styles/input_pill.css
@@ -35,6 +35,7 @@
         .pill-image {
             height: var(--length-input-pill-image);
             width: var(--length-input-pill-image);
+            min-width: var(--length-input-pill-image);
             border-radius: 4px 0 0 4px;
         }
 
